--- a/src/contact.html
+++ b/src/contact.html
@@ -26,7 +26,7 @@ permalink: /contact
                 </div>
                 <div class="col-lg-9">
                     
-                    <form role="form" method="post" action="mailto:marc@bhgroupe.fr">
+                    <form role="form" method="post" action="mailto:koucic@gmail.com">
                         <div class="form-group has-feedback ">
                             <label for="form_lastname">NOM</label>
                             <input type="text" name="lastname" id="form_lastname" value="" class="form-control"
