--- a/src/devis.html
+++ b/src/devis.html
@@ -32,7 +32,7 @@ permalink: /devis
                 </div>
                 <div class="col-12 col-lg-9">
 
-                    <form role="form" method="post" action="mailto:marc@bhgroupe.fr">
+                    <form role="form" method="post" action="mailto:koucic@gmail.com">
 
 
                         <div class="row">
@@ -263,7 +263,7 @@ permalink: /devis
                                         <label for="form_date1">Date de déménagement</label>
 
                                         <input type="datetime-local" value="" class="form-control"
-                                            placeholder="28/08/2020">
+                                            placeholder="28/08/2021">
                                     </div>
                                 </div>
                                 <div class="col-sm-6 ">
