--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ permalink: /
                                 
                                 <h5 class="text-center text-white mb-4">DEVIS EN LIGNE GRATUIT</h5>
 
-                                <form role="form" method="post" action="mailto:marc@bhgroupe.fr">
+                                <form role="form" method="post" action="mailto:koucic@gmail.com">
                                     <div class="row">
                                         <div class="col-sm-8 offset-2">
                                             <div class="form-group">
@@ -81,7 +81,7 @@ permalink: /
                     <div class="block-icon-caption">
                         <h4 class="block-icon-title"><a href="single-service.html">Organisez votre déménagement pas cher
                                 en Île de France!</a></h4>
-                        <p>Besoin d’informations? Contactez-nous au 06 72 16 76 34.</p>
+                        <p>Besoin d’informations? Contactez-nous au 07 53 31 99 11 76 34.</p>
                     </div>
                 </div>
 
