--- a/src/nos-formules.html
+++ b/src/nos-formules.html
@@ -276,7 +276,7 @@ permalink: /nos-formules
         <section>
             <div class="row p-4 subscribe-form">
                 <div class="col col-md-5 offset-md-2 col-sm-12"> 
-                    <form role="form" method="post" action="mailto:marc@bhgroupe.fr">
+                    <form role="form" method="post" action="mailto:koucic@gmail.com">
                         <div class="row">
                             <div class="col col-lg-9 col-md-12 col-sm-12 pr-0">
                                 <input class="form-control subscribe-email" type="text" name="" id="">
