--- a/src/notre-entreprise.html
+++ b/src/notre-entreprise.html
@@ -139,7 +139,7 @@ permalink: /notre-entreprise
                         <div class="icon-figure"><span class="icon icon-xl thin-icon-mobile"></span></div>
                         <div class="block-icon-caption">
                             <h4 class="block-icon-title"><a href="single-service.html">Une hésitation ? Contactez notre
-                                    équipe au 06 72 16 76 34</a></h4>
+                                    équipe au 07 53 31 99 11 76 34</a></h4>
 
                         </div>
                     </div>
