--- a/src/services.html
+++ b/src/services.html
@@ -292,7 +292,7 @@ permalink: /services
                 <div class="col-12 col-lg-9">
                     <!-- RD Mailform-->
                     <form class="rd-mailform text-left row row-20" data-form-output="form-output-global"
-                        data-form-type="contact" method="post" action="mailto:marc@bhgroupe.fr">
+                        data-form-type="contact" method="post" action="mailto:koucic@gmail.com">
                        
                         <div class="col-sm-6 col-lg-4">
                             <div class="form-wrap">
