--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@ permalink: /
                                         <div class="col-sm-8 offset-2">
                                             <div class="form-group">
                                                 <label class="text-white">Téléphone</label>
-                                                <input type="text"  class="form-control" placeholder=""> 
+                                                <input type="phone"  class="form-control" placeholder=""> 
                                                     
                                             </div>
                                         </div>
