--- a/src/demenagement-92.html
+++ b/src/demenagement-92.html
@@ -62,7 +62,7 @@ permalink: /demenagement-92
                 <div class="col-md-4 mt-3 text-center">
                     <img src="./assets/images/embale-chaise-demenagement.jpg" class="img_responsive" alt="professionnels proches">
                     <h4 class="front-title">Des formules à partir de 300 euros</h4>
-                    <p class="text-justify">Notre formule la plus économique ne coûte que 300 €. Elle comprend la location de camion de 22 m3 avec chauffeur, 7 heures de mise à disposition (travail effectif) et 50 km inclus. Une formule intermédiaire à 480 € vous propose en outre la mise à disposition d’un déménageur professionnel, tandis que la formule à 660 € vous en propose deux. Des prestations complémentaires, telles que monte-meuble ou garde meuble sont possibles également.</p>
+                    <p class="text-justify">et , en autre,  Une formule intermédiaire à 480 € vous propose en outre la mise à disposition d’un déménageur professionnel, tandis que la formule à 660 € vous en propose deux. Des prestations complémentaires, telles que monte-meuble ou garde meuble sont possibles également.</p>
                     
           
                 </div>
