Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
                                     déménagement en
                                     Île de France à petits prix!</h1>
                                     <div class="text-center mt-4">
-                                        <a class="button button-primary text-center" href="#" data-caption-animate="fadeInUp"
+                                        <a class="button button-primary text-center" href="contact.html" data-caption-animate="fadeInUp"
                                             data-caption-delay="450">Nous Contacter</a>
                                     </div>
                                 
